# protein-interaction-networks-graph

./: .gitignore  CITATION.cff  README.md  pyproject.toml
papers/: proteins.aux  proteins.bbl  proteins.blg  proteins.out  proteins.tex  refs.bib
src/: __main__.py  basic.py
